--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.2"
+    "react-icons": "^3.10.0",
+    "react-id-swiper": "^4.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.2",
+    "swiper": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
