--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-id-swiper": "^4.0.0",
+    "react-numeric-input": "^2.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.2",
     "react-slick": "^0.27.9",
